# Indiestudio---Bomberman-

./: .gitignore  CMakeLists.txt
.github/: README.md
assets/player/: Bombing.iqm  BombingAnim.iqm  Rotating.iqm  RotatingAnim.iqm  SteveWaiting.mtl  VictoryJump.iqm  VictoryJumpAnim.iqm  VictorySneakAnim.iqm  WalkingAnim.iqm
assets/wall/: StoneBrick.mtl  TNT.mtl
include/: binds.hpp  bomb.hpp  bot.hpp  core.hpp  gengine.hpp  graphLib.hpp  items.hpp  map.hpp  mapGenerator.hpp  menus.hpp  options.hpp  player.hpp  pos.hpp  powerUp.hpp  renderables.hpp  saveManager.hpp  timer.hpp
src/: binds.cpp  bomb.cpp  bot.cpp  core.cpp  gengine.cpp  graphLib.cpp  map.cpp  mapGenerator.cpp  menus.cpp  options.cpp  player.cpp  pos.cpp  powerUp.cpp  saveManager.cpp  timer.cpp
